# CS316-2021

./: CS316-Y2021.cabal  README.md
lecture-notes/: Intro.hs  Week01.hs  Week01Problems.hs  Week01Solutions.hs  Week02Intro.hs  Week02Solutions.hs  Week03Intro.hs  Week03Problems.hs  Week03Solutions.hs  Week04Intro.hs  Week04Problems.hs  Week05Intro.hs  Week05Problems.hs  Week06Intro.hs  Week06Problems.hs  Week07Intro.hs  Week08Intro.hs  Week08Solutions.hs  Week09Intro.hs
