name:                CS316-Y2021
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bobatkey/CS316-Y2020#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Atkey
maintainer:          robert.atkey@strath.ac.uk
copyright:           BSD3
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hello-cs316
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:      lecture-notes
  exposed-modules:     Week01,
                       Week01Problems,
                       Week01Solutions,
                       Week02,
                       Week02Problems,
                       Week02Solutions,
                       Week03,
                       Week03Problems,
                       Week03Solutions,
                       Week04,
                       Week04Problems,
                       Week04Solutions,
                       Week05,
                       Week05Problems,
                       Week05Solutions,
                       Week06,
                       Week06Problems
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       split == 0.2.3.3,
                       HTTP >= 4000.3.14
